working out header sizing issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ footer {
     }
     header ul {
         margin-top: -70px;
-        font-size: 15px;
+        font-size: 80%;
     }
     .col_1 {
         width: 30vw;
